# Squable

./: .gitignore  README.md  capacitor.config.ts  index.html  package.json  settings.gradle  squable.code-workspace  vite.config.ts
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/prometheontechnologies/squable/: MainActivity.java
android/app/src/main/res/values/: strings.xml
app/: build.gradle
app/src/androidTest/java/com/prometheontechnologies/squable/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/prometheontechnologies/squable/: MainActivity.java
app/src/main/res/layout/: activity_main.xml  activity_sign_in.xml  activity_sign_up.xml  app_bar_main.xml  fragment_home.xml  nav_header_main.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/prometheontechnologies/squable/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
setup/: post_install.sh  setup_debian.sh  setup_mac.sh  setup_windows.ps1
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/ContextMenu/: index.tsx
src/components/Counter/: index.tsx
src/components/Navbar/: index.tsx
src/components/Sidebar/: index.tsx
src/pages/Home/: index.tsx
src/pages/Settings/: index.tsx
src/routes/: Routes.tsx  index.tsx
src/static/types/enums/: index.ts
src/static/types/interfaces/: index.tsx
src/store/ui/: index.ts  selectors.ts
src/styles/: context_menu.css  footer_wrapper.css  header_wrapper.css  imports.css  index.css  scrollbar.css  titlebar.css
src/utils/hooks/: utils.ts
src/utils/hooks/app/: index.ts
(+12 files in other folders)
